--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,19 @@
         </activity>
 
         <activity
+            android:name="com.mp3cutter.soulappsworld.MixAudioActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:hardwareAccelerated="true"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true">
+            <intent-filter android:label="@string/edit_intent" >
+                <action android:name="android.intent.action.EDIT" />
+
+                <data android:mimeType="audio/*" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name="com.mp3cutter.soulappsworld.ChooseContactActivity"
             android:configChanges="orientation|keyboardHidden" >
         </activity>
